cabal-version:   3.0
name:            eulerhs
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable eulerhs
    import:           warnings
    main-is:          Main.hs
    other-modules:    Input
    build-depends:    base ^>=4.19, template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010
